Second final version.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,6 @@
 \chapter*{Abstract}
-Focal adhesion kinase (FAK) is a tyrosine kinase associated to focal adhesions.
-
-Mein erstes wort ist yo.
+Focal adhesion kinase (FAK) is a tyrosine kinase associated to focal adhesions with a downstream effect on, for example, cell migration and surviving. Its activation is linked to integrin signalling whereby phosphatidylinositol-4,5-bisphosphate (\pip) acts as a moderator. \pip{} has allosteric effects on FAK and is required for activation. Moreover, it induces clustering of FAK molecules, but the impact of clustering on the conformation of FAK is still not understood. Since an overexpression of FAK is associated with invasive tumours, insights in the clustering process could give rise to new cancer treatments. In this project, we performed MD simulations with the coarse-grained force field \martini{}. In previous studies, an unnaturally falling of FAK in \martini{} was observed. Although we are able to exclude the main binding site of FAK to \pip{} as the problem, the cause could not be identified. Therefore, we introduced a stabilizing force acting on the FAK molecules. Our observations support the conclusion that FAK clusters arrange to chain-like structures. However, we did not observe a significant change of activation-associated quantities for protein instances inside the clusters.\\
+\\
+\begin{german}
+	Focal adhesion kinase (FAK) ist eine Tyrosinkinase, die vermehrt in Fokalen Adhäsionen zu finden ist und regulierende Effekte auf z.B. Zellmigration und Zellüberlebensfähigkeit hat. Die Aktivierung von FAK wird u.a. durch Signalgebungen von Integrin-Molekülen hervorgerufen, wobei phosphatidylinositol-4,5-bisphosphate (\pip) als Mediator auftritt. \pip{} bewirkt allosterische Effekte in FAK und ist notwendig für die Aktivierung. Zudem induziert \pip{} die Bildung von Clustern. Allerdings ist der Einfluss der Clusterbildung auf die Konformation von FAK noch nicht vollständig verstanden. Da in invasiven Tumoren häufig eine überdurchschnittlich hohe Konzentration von FAK zu finden ist, könnte ein tieferes Verständnis der Clusterbildung ein wichtiger Schritt auf dem Weg zu neuartigen Krebstherapien sein. Die vorliegende Arbeit stützt sich auf MD simulationen mit dem Kraftfeld \martini{}. In vorangegangenen Untersuchen wurde ein unnatürliches Umfallen von FAK auf die Seite beobachtet. Obwohl wir die Hauptbindungsstelle von FAK zu \pip{} als Problem ausschließen können, konnte der tatsächliche Grund des Fallens nicht identifiziert werden. Daher führten wir eine Stabilisierungskraft ein, die auf die FAK-Moleküle wirkt. Unsere Beobachtungen lassen den Schluss zu, dass sich FAK-Cluster in kettenartigen Strukturen bilden. Allerdings konnte keine signifikante Änderung von Observablen, die mit Aktivierung von FAK assoziiert werden, für Proteine aus solchen Strukturen festgestellt werden.
+\end{german}
