--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,14 +1,15 @@
 \chapter{Conclusion}
 The aim of the present work was to gain insight into conformational changes of FAK due to \pip{} binding and interactions between multiple FAK molecules. To this end, we used coarse-grained MD simulations with the \martini{} force field.\\
 \\
-Previous work in the group revealed unnatural behaviour of FAK bound to a \pip{}-containing membrane in \martini{} simulations, namely a falling sidewards. We were able to proof that it is not induced by an underestimation of \pip{} binding at the basic patch. Indeed, \martini{} was able to reproduce the free energy profile of this binding obtained from a reference simulation in \charmm{} remarkably. However, the cause of the falling is still an outstanding question and should be addressed in further studies.\\ % FDA?
+Previous work in the group revealed unnatural behaviour of FAK bound to a \pip{}-containing membrane in \martini{} simulations, namely, a falling sidewards on the membrane. We were able to prove that this is not induced by an underestimation of \pip{} binding at the basic patch. Indeed, \martini{} was able to reproduce the free energy profile of this binding obtained from a reference simulation in \charmm{} remarkably well. However, the cause of the falling is still an outstanding question and should be addressed in further studies.\\ % FDA?
 \\
-In this project we introduced a workaround, namely a stabilising force acting on the FERM domain of the FAK molecules. In \autoref{forceana}, we showed that this approach doesn't influence the observables used in the remaining part, but we are aware if its limitations (discussed in \autoref{forceana}) and still investigate possible alternatives, for example flat-bottom potentials or cylindrical pulling \autocite[p. 156-158]{gromacsManual}.\\
+In this project, we introduced a workaround, namely, a stabilising force acting on the FERM domain of the FAK molecules. In \autoref{forceana}, we showed that this approach does not influence the observables used in the remaining part, but we are aware of its limitations (discussed in \autoref{forceana}) and still investigate possible alternatives, for example, flat-bottom pulling \autocite[p. 156-158]{gromacsManual}.\\
 \\
-From the configurations obtained for FAK in solution, we identified important residues contributing to the FERM-kinase interface. The observations fit well with experimental studies of \textcite{structFAK}. Also the burying of the active site of the kinase as well as the hiding of the autophosphorylation site was observed in the simulations.\\
-We compared these results to conformations obtained in FAK molecules bound to a \pip{}-containing membrane and identified configurational changes. They involve not only the promotion of the autophosphorylation site, but also a partial opening of the FERM-kinase interface. These changes are consistent with previous studies on allosteric effects of \pip{} binding to FAK by \textcite{pap001} and \textcite{pap003}.\\
+From the configurations obtained for FAK in solution, we identified important residues contributing to the FERM-kinase interface. The observations fit well with experimental studies of \textcite{structFAK}. Also the burying of the active site of the kinase as well as the hiding of the autophosphorylation site were observed in the simulations.\\
+We compared these results to conformations obtained in FAK molecules bound to a \pip{}-containing membrane and identified configurational changes. They involve not only the promotion of the autophosphorylation site, but also a partial opening of the FERM-kinase interface at the activation loop of the kinase. These changes are consistent with previous studies on allosteric effects of \pip{} binding to FAK by \textcite{pap001} and \textcite{pap003}.\\
 \\
-In \autoref{multiProt} we investigated the interactions between multiple FAK molecules on a membrane. We were able to confirm the importance of \acid{W}{266} in FERM-FERM dimerization proposed by \textcite{fakdimers}. However, our observations imply that FERM-kinase dimers form more often than FERM-FERM dimers.\\
-Regarding more than two FAK molecules, we observed a tendency to aggregate in chain-like structures. These structures were investigated on activation-promoting features, like increased domain distances or a smaller contact area, but no significant differences have been observed.\\
+In \autoref{multiProt}, we investigated the interactions between multiple FAK molecules on a membrane. Our observations do not support a conclusion on the energetic preference of the different dimer types. Yet, we were able to confirm the importance of \acid{W}{266} in FERM-FERM dimerization proposed by \textcite{fakdimers}. Regarding more than two FAK molecules, we observed a tendency to aggregate in chain-like structures. These structures were investigated for activation-promoting features, like increased domain distances or a smaller contact area, but no significant differences have been observed.\\
 \\
-Several aspects of FAK clustering are still elusive and have to be clarified in further studies. First, FERM-kinase dimers are of special interest since they were observed the most. Therefore, the identification of key residues and preferred binding poses might contribute to the understanding of FAK clustering processes. Moreover, the impact of the \pip{} concentration in the membrane on the clustering process has to be investigated. Also the analysis of the scaffolding function of FAK clusters as well as their impact on the membrane is required to develop an exhaustive model of the role of FAK.
+Several aspects of FAK clustering are still elusive and have to be clarified in further studies. First, the local aggregation and arrangement of FAK molecules is of special interest and could be investigated with further simulations of dimers, trimers and tetramers. With a deep understanding of these interactions, simulations of larger oligomers with a higher level of coarse graining could become accessible. Moreover, a more detailed analysis of the role of the membrane, especially the \pip{} concentration and membrane curvature, might contribute to the understanding of FAK clustering processes.
+
+
