--- a/document.tex
+++ b/document.tex
@@ -1,3 +1,9 @@
+% TODOS!!!
+%	-> write Section instead of section
+%	-> rearrange images and paragraphs
+%	-> check (see ...)
+%   -> check Text.// bild // Text.
+%	-> write in methods, dass sich Protein auch drehen kann, auch in Markov-Chain.
 % kompiliert mit XeLaTeX
 \documentclass[
 11pt, % font size
@@ -13,7 +19,7 @@ oneside, % oneside / twoside
 \usepackage{graphicx}
 \usepackage{enumitem}
 
-\title{Understanding}
+\title{Understanding Focal Adhesion Kinase Clustering Using Coarse-Grained MD Simulations}
 \author{Max SImon}
 \date{August 21, 2017}
 
@@ -43,11 +49,11 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-%\includeonly{conclusion}
+%\includeonly{abstract, motivation}
 
 \begin{document}
 % abstract english
-%\include{abstract}
+\include{abstract}
 %	
 %	
 % chapter introduction
@@ -72,6 +78,7 @@ oneside, % oneside / twoside
 %
 % chapter conclusion
 \include{conclusion}
+%
 %
 %
 \printbibliography[title=References]{}
