--- a/methods.tex
+++ b/methods.tex
@@ -1,4 +1,5 @@
 \chapter{Methods}
+Before we can present the used setups and the obtained results, the most important methods used in the course of the project are explained. These involve molecular dynamics simulations (MD) as well as umbrella sampling. Furthermore, the concepts used for the classification of multiple FAK interactions are introduced.
 \section{Molecular dynamics simulations}
 \input{methods/md}
 \section{Free energy calculations}
