--- a/results/multiProtInteractions.tex
+++ b/results/multiProtInteractions.tex
@@ -2,22 +2,24 @@
 The focus in this section is on interactions obtained from setup 4 occurring between multiple FAK molecules. At this point, we want to remind the reader that the used protein structure lacks the FAT domain, which is in full length FAK connected to the kinase via a linker region. This might have a significant effect on clustering processes.
 \subsection{Dimerization of FAK}
 \label{mult:dimers}
-First, we want to investigate interactions between two FAK molecules. To this end, we filtered the dataset for interactions in which both partners have exactly one neighbour (dimers). It turns out that FERM-kinase dimers occur the most, followed by FERM-FERM dimers. Because the latter have been experimentally investigated by \textcite{fakdimers}, a short comparison between the obtained results and the experimental findings follows. For this purpose, we chose the dimer with the longest lasting time as a representative example.\\
+First, we want to investigate interactions between two FAK molecules. To this end, we filtered the dataset for interactions in which both partners have exactly one neighbour (dimers). It turns out that FERM-kinase dimers (type 3 neighbours) occur the most, followed by FERM-FERM dimers (type 1 neighbours). Probably, this does not reflect an energetic preference but is rather attributed to the initial biased preference of type 1 interactions (see \autoref{methods:contactana}). Regarding our observations, the number of encounters of FERM-FERM dimers plus the number of encounters of kinase-kinase dimers is, indeed, very similar to the number of encounters of FERM-kinase dimers. Actually, it is difficult to retrieve the energetic preference of the dimerization-type in \martini{}. Since two proteins can only interact within the cut-off radius of long range interactions, the proteins forming a dimer are already very close before starting to interact and might can not adjust their orientations.\\
+\\
+Because FERM-FERM dimers have been experimentally investigated by \textcite{fakdimers}, a short comparison between the obtained results and the experimental findings follows. For this purpose, we chose the FERM-FERM dimer with the longest lasting time as a representative example.\\
 The contact map of the interaction surface is shown in \autoref{mult:fermfermcontact}. From this, the importance of residue \acid{W}{266} can be confirmed (orange region). Beside this, also the residues \acid{Y}{282} to \acid{K}{286} (green region) and \acid{T}{291} to \acid{A}{294} (red region) appear as important actors at the interaction surface since they interact with \acid{W}{266} and among each other. However, the RMSF value of these distances is larger than for the pairs involving \acid{W}{266}.\\
-At this point, it has to be said that other FERM-FERM dimers in the simulation also show contacts between F1 and F3. Since, however, they are not visible in other samples (e.g. the chosen one), they are not presented here.\\
-Comparing the FERM-kinase of the involved proteins to FAK-MEM, we noticed a closure of the interface by ca. $0.2\,\si{\nano\metre}$. This can be attributed to the fact that FERM-FERM dimerisation requires an uplift of F3, because the interaction interface points towards the membrane in FAK-MEM. Since the FERM domain is anchored on the membrane via the basic patch, this would push the kinase partly into the membrane (see \autoref{tobeadded}). Therefore, a force is acting on the kinase which might leads to the observed closure.
+At this point, it has to be remarked that other FERM-FERM dimers in the simulation also show contacts between F1 and F3. Yet, since these contacts are not visible in other samples (e.g. the chosen one), they are not presented here.\\
+Comparing the FERM-kinase interfaces of the involved proteins to FAK-MEM, we noticed a decrease of the inter residue distances by ca. $0.2\,\si{\nano\metre}$. This can be attributed to the fact that FERM-FERM dimerisation requires an uplift of F3, because the interaction interface points towards the membrane in FAK-MEM. Since the FERM domain is anchored on the membrane via the basic patch, this would push the kinase partly into the membrane (see \autoref{mult:fermferm_sketch}). Therefore, a force is acting on the kinase, which is a possible reason for the observed closure.
 %
 %
 %
-% TODO: fix numbering, plot a sign for the residues in, colorbar more to the right.
-\begin{figure}
+\begin{figure}[h]
 	\subcaptionbox{\label{mult:fermferm_sketch}}[0.49\textwidth]{
 		\includegraphics[height=3cm]{figures/results/fermfermdimer_sketch}
+		\vspace{1.5cm}
 	}\hfill%
 	\subcaptionbox{\label{mult:fermfermcontact}}[0.5\textwidth]{
 		\includegraphics[height=6cm]{figures/results/fermferminterface}
 	}
-	\nicecaption{FERM-FERM dimers}{(\subref{mult:fermferm_sketch}): Sketch of FERM-FERM dimer. In FAK-MEM (left) the interaction site points to the membrane. Therefore, an uplift of F3 is required for dimerization (right) which pushes the kinase into the membrane. \acid{W}{266} is marked with a star. (\subref{mult:fermfermcontact}):  Contact map of the interaction site between the two FERM domains (only F3 is shown). \acid{W}{266} (orange) forms a lot of contacts with the neighbouring FAK molecule. Also the regions around \acid{Y}{282} (green) and \acid{H}{292} are important contributors.}
+	\nicecaption{FERM-FERM dimers}{(\subref{mult:fermferm_sketch}): Sketch of FERM-FERM dimer. In FAK-MEM (left) the interaction site points to the membrane. Therefore, an uplift of F3 is required for dimerization (right), which pushes the kinase into the membrane. \acid{W}{266} is marked with a star. (\subref{mult:fermfermcontact}):  Contact map of the interaction site between the two FERM domains (only F3 is shown). \acid{W}{266} (orange) forms a lot of contacts with the neighbouring FAK molecule. In addition, the regions around \acid{Y}{282} (green) and \acid{H}{292} (red) are important contributors.}
 	\label{mult:fermferm}
 \end{figure}
 %
@@ -25,12 +27,11 @@ Comparing the FERM-kinase of the involved proteins to FAK-MEM, we noticed a clos
 %
 \subsection{FAK clusters}
 \label{mult:oligs}
-The characterisation of the emerged FAK clusters is very difficult as they differ a lot in size and shape. The largest cluster observed in setup 4 had a size of 21 proteins, while there are other proteins, which did not join any cluster at all. Present shapes of the clusters include long chains as well as ring like conformations or just agglomerations (see \autoref{clust:3d}).\\
-\\
+The characterisation of the emerged FAK clusters is very difficult as they differ a lot in size and shape. The largest cluster observed in setup 4 has a size of 21 proteins, while there are other proteins, which did not join any cluster at all. Present shapes of the clusters include long chains as well as ring-like conformations or just agglomerations (see \autoref{clust:3d}).\\
 %
 %
 %
-\begin{figure}
+\begin{figure}[hb]
 	\subcaptionbox{\label{clust:3d_chain}}[0.32\textwidth]{
 		\includegraphics[height=3cm]{figures/results/fak_chainlike}
 	}\hfill%
@@ -46,9 +47,10 @@ The characterisation of the emerged FAK clusters is very difficult as they diffe
 %
 %
 %
-In order to classify the occurring interactions, we analysed the time evolution of the neighbouring types introduced in \autoref{methods:contactana} as well as the transitions among them (see \autoref{mult:inttype_both}). These plots indicate that FERM-kinase interactions (type 3) occur the most, while type 1, 2, 4 and 5 occur equally often. Moreover, the first contact of two FAK molecules appears only between two domains (type 1 to 3). These neighbours can alter than to type 4 and 5 (three interacting domains), but also backwards. Interactions involving all four domains occur less often. Especially type 7 neighbours seem to be unstable, since the loose contact immediately after formation (see \autoref{mult:inttype_vs_t}).\\
-Lastly, the mean number of neighbours is considered. It turns out that there is a fast rising in the beginning and a flattening after $6\,\si{\micro\second}$. The average over the five copies is at the end of the simulation $1.86$ neighbours.\\
-From these observations, one could draw the conclusion that the preferred arrangement of FAK molecules are chains along their long axis. The FAK molecules inside the chain interact either as type 3 (FK chains) neighbours or as type 1 and type 2 neighbours (FFKK chains). Of course also combinations of these two are possible.
+\\
+In order to classify the occurring interactions, we analysed the time evolution of the neighbouring types as well as the transitions among them (see \autoref{mult:inttype_both}). These plots indicate that interactions involving two domains in total (type 1, 2 and 3) occur much more often than interactions involving four domains (type 6 and 7). Especially type 7 neighbours seem to be unstable, since they always lose contact immediately after the formation (see \autoref{mult:inttype_vs_t}, pink line). Therefore, a tendency for interactions along the long axis of FAK can be deduced.\\
+Furthermore, the mean number of neighbours is considered. This quantity rises fast in the beginning and flattens after $6\,\si{\micro\second}$. The average over the five copies is $1.86$ neighbours at the end of the simulations.\\
+From these observations, the conclusion can be drawn that the preferred arrangement of FAK molecules are chains along their long axis. The FAK molecules inside the chain can interact either as type 3 neighbours (FK chains) or as type 1 and type 2 neighbours (FFKK chains). Combinations of these two are also possible.
 %
 %
 %
@@ -66,14 +68,14 @@ From these observations, one could draw the conclusion that the preferred arrang
 %
 %
 \subsection{Activation due to clustering}
-Lastly, the impact of clustering on FAK activation is addressed. Activation means here the dissociation of the FERM domain from the kinase, so we analysed our data with respect to the contact area (CA) of the FERM-kinase interface.\\
-Unfortunately, in no FAK molecule did a full dissociation take place at any time. Because only a small number of FAK molecules were in the system and because the clustering process is not finished at the end of the simulations, this does not mean that activation due to clustering is impossible at all. In the hope of seeing trends regarding to activation, a more detailed analysis of the CA for the different proteins was performed.\\
+Lastly, the impact of clustering on FAK activation is addressed. Since activation means the dissociation of the FERM domain from the kinase, we analysed our data with respect to the CA values, $d_\text{F1-N}$ and $d_\text{F2-C}$.\\
+Unfortunately, in no FAK molecule did a full dissociation take place at any time. In addition, the CA values seem to be independent of the number of neighbours, the interaction type and the clustersize. Because only a small number of FAK molecules was put into the system and the clustering process was not finished at the end of the simulations, this does not mean that activation due to clustering is impossible. In the hope of seeing trends regarding to activation, a more detailed analysis for the different proteins was performed.\\
 \\
-At first glance, the CA seems to be independent of the number of neighbours, the interaction type and the clustersize. Motivated from \autoref{mult:oligs} we focus on FAK molecules inside chains in the following. A FAK molecule can be seen as a chain member if it has exactly two neighbours and if these neighbours are not neighbours of one another. For FK chains, only type 3 interactions were allowed, for FFKK chains both, type 1 and type 2. We compare the results to FAK-MEM in \autoref{mult:fk_ca} for FK chains and in \autoref{mult:ff_ca} for FFKK chains.\\
-\autoref{mult:fk_ca} indicates that an arrangement of FAK molecules to FK chains does not influence the mean value of CA. The distribution gets slightly sharper compared to FAK-MEM, which could imply a stabilisation of the interface. Not even the distributions of $d_\text{F1-N}$ and $d_\text{F2-C}$ differs noticeably from those obtained in FAK-MEM.\\
-Neither does an arrangement into FFKK chains affects the value of CA (\autoref{mult:ff_ca}) significantly. The distribution gets slightly sharper and shifted to smaller values by $0.6\,\si{\nano\metre}$ ($2\%$). However, the distribution of $d_\text{F1-N}$ indicates a trend to larger values in comparison to FAK-MEM, which refers to an more open state of FAK.\\
+Motivated from \autoref{mult:oligs}, we focus on FAK molecules inside chains. A FAK molecule can be seen as a chain member if it has exactly two neighbours and if these neighbours are not neighbours of one another. For FK chains, only type 3 interactions were allowed, for FFKK chains both, type 1 and type 2. We compare the results for FK chains and FFKK chains to FAK-MEM (see \autoref{mult:fk_ca} and \autoref{mult:ff_ca}, respectively).\\
+\autoref{mult:fk_ca} indicates that an arrangement of FAK molecules to FK chains does not influence the mean value of CA. The distribution gets slightly sharper compared to FAK-MEM, which could imply a stabilisation of the interface. Not even the distributions of $d_\text{F1-N}$ and $d_\text{F2-C}$ differ noticeably from those obtained in FAK-MEM.\\
+Neither does an arrangement into FFKK chains affects the value of CA (\autoref{mult:ff_ca}) significantly. However, the distribution of $d_\text{F1-N}$ indicates a trend to larger values in comparison to FAK-MEM, which are linked to a more open state of FAK.\\
 \\
-The filtering leads of course to a smaller sampling of the distributions of $d_\text{F1-N}$, $d_\text{F2-C}$ and CA. For example, for FFKK chains, only 10 different FAK instances were taken into account ($21.7\,\si{\micro\second}$ simulation time in total). However, the obtained changes are visible in almost all of the 10 instances.
+The filtering leads to a smaller sampling of the distributions of $d_\text{F1-N}$, $d_\text{F2-C}$ and CA. For example, for FFKK chains ca. $40\%$ of the underlying dataset ($21.7\,\si{\micro\second}$ of simulation time in total) comes from one FAK instance only. Therefore, the statistical significance of the obtained difference doubtful.
 %
 %
 %
@@ -89,7 +91,7 @@ The filtering leads of course to a smaller sampling of the distributions of $d_\
 %
 %
 %
-\begin{figure}
+\begin{figure}[hb]
 	\centering
 	\includegraphics[height=6cm]{figures/results/fk_ca}
 	\nicecaption{Domain distances and contact area of FK chains}{(left): The Q-Q plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ distributions in comparison to FAK-MEM imply a strong similarity. (right): The CA value doesn't change noticeably in comparison to FAK-MEM.}
@@ -102,7 +104,7 @@ The filtering leads of course to a smaller sampling of the distributions of $d_\
 %
 %
 %
-\begin{figure}
+\begin{figure}[t]
 	\centering
 	\includegraphics[height=6cm]{figures/results/ff_ca}
 	\nicecaption{Domain distances and contact area of FFKK chains}{(left): The Q-Q plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ distributions in comparison to FAK-MEM imply a tendency to larger distances of F1 and the N-lobe for FFKK chain members. (right): The CA value decreases slightly by $2\%.$.}
